# codemap

./: .gitignore  CLAUDE.md  KICKOFF_PROMPT.md  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml
codemap/: __init__.py
codemap/core/: indexer.py
codemap/parsers/: __init__.py  dart_parser.py  php_parser.py
codemap/tests/: test_dart_parser.py  test_php_parser.py
codemap/tests/fixtures/: sample_module.dart  sample_module.php
codemap/utils/: config.py  file_utils.py
docs/: AI_ASSISTANT_INSTRUCTIONS.md  CODEMAP_INSTRUCTIONS_EMBED.md
docs/plans/: language-support-roadmap.md
plugin/: README.md
